--- a/brewer/src/main/resources/templates/cerveja/CadastroCerveja.html
+++ b/brewer/src/main/resources/templates/cerveja/CadastroCerveja.html
@@ -3,6 +3,14 @@
 
 <body>
 	<h1>Olá! Thymeleaf configurado!</h1>
+	
+	<form method="POST">
+		<label>SKU</label>
+		<input type="text" name="sku"/>
+		<br>
+		
+		<input type="submit" value="Salvar"/>
+	</form>
 </body>
 
 </html>
