--- a/brewer/src/main/resources/static/stylesheets/brewer.css
+++ b/brewer/src/main/resources/static/stylesheets/brewer.css
@@ -21,3 +21,9 @@
 .bw-field-action__icon {
 	margin: 6px 0 0 5px;
 }
+
+.switch-align {
+	padding-left: 0px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
