--- a/brewer/src/main/resources/templates/cerveja/CadastroCerveja.html
+++ b/brewer/src/main/resources/templates/cerveja/CadastroCerveja.html
@@ -48,7 +48,7 @@
 						<div class="bw-field-action">
 							<select id="estilo" class="form-control">
 								<option value="">Selecione o estilo</option>
-								<option value="1">Pale lager</option>
+								<option th:each="estilo : ${estilos}" th:value="${estilo.codigo}" th:text="${estilo.nome}">Pale lager</option>
 							</select>
 							
 							<div class="bw-field-action__icon">
@@ -63,7 +63,7 @@
 						<label for="sabor">Sabor</label>
 						<select id="sabor" class="form-control">
 							<option value="">Selecione o sabor</option>
-							<option value="1">Adocicada</option>
+							<option th:each="sabor: ${sabores}" th:value="${sabor}" th:text="${sabor.descricao}">Adocicada</option>
 						</select>
 					</div>
 					
@@ -78,14 +78,12 @@
 					<div class="col-lg-3  col-sm-6  form-group">
 						<label for="origem">Origem</label>
 						<div>
-							<div class="radio  radio-inline">
-								<input type="radio" name="origem"> 
-								<label>Nacional</label>
-							</div>
-							<div class="radio  radio-inline">
-								<input type="radio" name="origem"> 
-								<label>Internacional</label>
-							</div>
+							<th:block th:each="origem : ${origens}">
+								<div class="radio  radio-inline">
+									<input th:id="|origem_${origem}|" type="radio" th:value="${origem}" name="origem">
+									<label th:for="|origem_${origem}|" th:text="${origem.descricao}"></label>
+								</div>
+							</th:block>
 						</div>
 					</div>
 				</div>
