--- a/brewer/src/main/resources/templates/cerveja/CadastroCerveja.html
+++ b/brewer/src/main/resources/templates/cerveja/CadastroCerveja.html
@@ -28,18 +28,18 @@
 				<div class="row">
 					<div class="col-sm-2  form-group">
 						<label for="sku">SKU</label>
-						<input id="sku" type="text" class="form-control"/>
+						<input id="sku" type="text" class="form-control" th:field="*{sku}"/>
 					</div>
 					
 					<div class="col-sm-10  form-group">
 						<label for="nome">Nome</label>
-						<input id="nome" type="text" class="form-control"/>
+						<input id="nome" type="text" class="form-control" th:field="*{nome}"/>
 					</div>
 				</div>
 	
 				<div class="form-group">
 					<label for="descricao">Descrição</label>
-					<textarea id="descricao" rows="3" class="form-control"></textarea>
+					<textarea id="descricao" rows="3" class="form-control" th:field="*{descricao}"></textarea>
 				</div>
 
 				<div class="row">
@@ -61,7 +61,7 @@
 					
 					<div class="col-sm-3  form-group">
 						<label for="sabor">Sabor</label>
-						<select id="sabor" class="form-control">
+						<select id="sabor" class="form-control" th:field="*{sabor}">
 							<option value="">Selecione o sabor</option>
 							<option th:each="sabor: ${sabores}" th:value="${sabor}" th:text="${sabor.descricao}">Adocicada</option>
 						</select>
@@ -70,7 +70,7 @@
 					<div class="col-sm-3  form-group">
 						<label for="teorAlcoolico">Teor alcoólico</label>
 						<div class="input-group">
-							<input id="teorAlcoolico" type="text" class="form-control  js-decimal"/>
+							<input id="teorAlcoolico" type="text" class="form-control  js-decimal" th:field="*{teorAlcoolico}"/>
 							<div class="input-group-addon">%</div>
 						</div>
 					</div>
@@ -80,7 +80,7 @@
 						<div>
 							<th:block th:each="origem : ${origens}">
 								<div class="radio  radio-inline">
-									<input th:id="|origem_${origem}|" type="radio" th:value="${origem}" name="origem">
+									<input th:id="|origem_${origem}|" type="radio" th:value="${origem}" name="origem" th:field="*{origem}">
 									<label th:for="|origem_${origem}|" th:text="${origem.descricao}"></label>
 								</div>
 							</th:block>
@@ -90,24 +90,24 @@
 				
 				<div class="row">
 					<div class="col-sm-3  form-group">
-						<label for="preco">Preço</label>
+						<label for="preco">Valor</label>
 						<div class="input-group">
 							<div class="input-group-addon">R$</div>
-							<input id="preco" type="text" class="form-control  js-decimal"/>
+							<input id="valor" type="text" class="form-control  js-decimal" th:field="*{valor}"/>
 						</div>
 					</div>
 					
 					<div class="col-sm-3  form-group">
 						<label for="comissao">Comissão</label>
 						<div class="input-group">
-							<input id="comissao" type="text" class="form-control  js-decimal"/>
+							<input id="comissao" type="text" class="form-control  js-decimal" th:field="*{comissao}"/>
 							<div class="input-group-addon">%</div>
 						</div>
 					</div>
 					
 					<div class="col-sm-3  form-group">
 						<label for="estoque">Estoque</label>
-						<input id="estoque" type="text" class="form-control  js-plain"/>
+						<input id="estoque" type="text" class="form-control  js-plain" th:field="*{quantidadeEstoque}"/>
 					</div>
 				</div>
 				
