--- a/brewer/src/main/resources/templates/cerveja/CadastroCerveja.html
+++ b/brewer/src/main/resources/templates/cerveja/CadastroCerveja.html
@@ -114,6 +114,9 @@
 				
 				<div class="row">
 					<div class="form-group  col-sm-12">
+					<input type="hidden" th:field="*{foto}"/>
+					<input type="hidden" th:field="*{contentType}"/>
+					
 						<label class="control-label">Foto</label>
 						
 						<div id="upload-drop" class="bw-upload">
@@ -145,8 +148,13 @@
 						type: 'json',
 						filelimit: 1,
 						allow: '*.(jpg|jpeg|png)',
-						action: '/brewer/fotos'
-				}
+						action: '/brewer/fotos', // URL da requisição
+						complete: function(resposta) { 
+							$('input[name=foto]').val(resposta.nome); //th:field automaticamente define o name=field
+							$('input[name=contentType]').val(resposta.contentType);
+						}
+				};
+			
 				
 				UIkit.uploadSelect($('#upload-select'), settings);
 				UIkit.uploadDrop($('#upload-drop'), settings);
