--- a/brewer/src/main/resources/templates/cerveja/CadastroCerveja.html
+++ b/brewer/src/main/resources/templates/cerveja/CadastroCerveja.html
@@ -114,15 +114,17 @@
 				
 				<div class="row">
 					<div class="form-group  col-sm-12">
-					<input type="hidden" th:field="*{foto}"/>
-					<input type="hidden" th:field="*{contentType}"/>
+						<input type="hidden" th:field="*{foto}">
+						<input type="hidden" th:field="*{contentType}">
 					
 						<label class="control-label">Foto</label>
 						
-						<div id="upload-drop" class="bw-upload">
-							<i class="glyphicon  glyphicon-cloud-upload"></i>
-							<span>Arraste a foto aqui ou </span>
-							<a class="bw-upload-form-file">selecione <input id="upload-select" type="file" accept=".jpg,.jpeg,.png"/></a>
+						<div class="js-container-foto-cerveja">
+							<div id="upload-drop" class="bw-upload">
+								<i class="glyphicon  glyphicon-cloud-upload"></i>
+								<span>Arraste a foto aqui ou </span>
+								<a class="bw-upload-form-file">selecione <input id="upload-select" type="file" accept=".jpg,.jpeg,.png"/></a>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -135,12 +137,14 @@
 		</div>
 		
 		<div th:replace="estilo/CadastroRapidoEstilo :: modal"></div>
+		<th:block th:replace="hbs/FotoCerveja"></th:block>
 	</section>
 	
 	<th:block layout:fragment="javascript-extra">
 		<script th:src="@{/javascripts/estilo.cadastro-rapido.js}"></script>
 		<script th:src="@{/javascripts/vendors/uikit.min.js}"></script>
 		<script th:src="@{/javascripts/vendors/upload.min.js}"></script>
+		<script th:src="@{/javascripts/vendors/handlebars.min.js}"></script>
 		
 		<script>
 			$(function() {
@@ -150,8 +154,26 @@
 						allow: '*.(jpg|jpeg|png)',
 						action: '/brewer/fotos', // URL da requisição
 						complete: function(resposta) { 
-							$('input[name=foto]').val(resposta.nome); //th:field automaticamente define o name=field
-							$('input[name=contentType]').val(resposta.contentType);
+							var inputNomeFoto = $('input[name=foto]');
+							var inputContentType = $('input[name=contentType]');
+							var htmlFotoCervejaTemplate = $('#foto-cerveja').html();
+							var template = Handlebars.compile(htmlFotoCervejaTemplate);
+							var htmlFotoCerveja = template({nomeFoto: resposta.nome});
+							var containerFotoCerveja = $('.js-container-foto-cerveja');
+							var uploadDrop = $('#upload-drop');
+							
+							inputNomeFoto.val(resposta.nome); //th:field automaticamente define o name=field
+							inputContentType.val(resposta.contentType);
+							
+							uploadDrop.addClass('hidden');
+							containerFotoCerveja.append(htmlFotoCerveja);
+							
+							$('.js-remove-foto').on('click', function() {
+								$('.js-foto-cerveja').remove();
+								uploadDrop.removeClass('hidden');
+								inputNomeFoto.val('');
+								inputContentType.val('');
+							});
 						}
 				};
 			
