--- a/brewer/src/main/resources/templates/cidade/CadastroCidade.html
+++ b/brewer/src/main/resources/templates/cidade/CadastroCidade.html
@@ -19,15 +19,15 @@
 	<div class="container-fluid">
 		<form>
 			<div class="row">
-				<div class="form-group  col-sm-4">
-					<label for="estado">Estado</label>
+				<div class="form-group  col-sm-4  bw-required">
+					<label for="estado" class="control-label">Estado</label>
 					<select id="estado" class="form-control">
 						<option value="">Selecione o estado</option>
 					</select>
 				</div>
 				
-				<div class="form-group  col-sm-8">
-					<label for="nome">Nome</label>
+				<div class="form-group  col-sm-8  bw-required">
+					<label for="nome" class="control-label">Nome</label>
 					<input type="text" class="form-control" id="nome" autofocus="autofocus">
 				</div>
 			</div>
