--- a/brewer/src/main/resources/templates/cerveja/CadastroCerveja.html
+++ b/brewer/src/main/resources/templates/cerveja/CadastroCerveja.html
@@ -15,10 +15,19 @@
 
 		<div class="page-header">
 			<div class="container-fluid">
-				<h1>
-					Cadastro de cerveja
-				</h1>
-			</div>
+				<div class="row">
+					<div class="col-sm-10">
+						<h1>Cadastro de cerveja</h1>
+					</div>
+					<div class="col-sm-2">
+						<div class="aw-page-header-controls">
+							<a class="btn btn-default" th:href="@{/cervejas}">
+								<i class="glyphicon  glyphicon-plus-sign"></i> <span class="hidden-xs  hidden-sm">Pesquisa</span>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div> 
 		</div>
 
 		<div class="container-fluid">
@@ -27,24 +36,24 @@
 			
 				<brewer:message/>
 				<div class="row">
-					<div class="col-sm-2  form-group" brewer:classforerror="sku">
+					<div class="col-sm-2  form-group  bw-required" brewer:classforerror="sku">
 						<label for="sku" class="control-label">SKU</label>
 						<input id="sku" type="text" class="form-control" th:field="*{sku}"/>
 					</div>
 					
-					<div class="col-sm-10  form-group" brewer:classforerror="nome">
+					<div class="col-sm-10  form-group  bw-required" brewer:classforerror="nome">
 						<label for="nome" class="control-label">Nome</label>
 						<input id="nome" type="text" class="form-control" th:field="*{nome}"/>
 					</div>
 				</div>
 	
-				<div class="form-group"  brewer:classforerror="descricao">
+				<div class="form-group  bw-required"  brewer:classforerror="descricao">
 					<label for="descricao" class="control-label">Descrição</label>
 					<textarea id="descricao" rows="3" class="form-control" th:field="*{descricao}"></textarea>
 				</div>
 
 				<div class="row">
-					<div class="col-sm-3  form-group" brewer:classforerror="estilo">
+					<div class="col-sm-3  form-group  bw-required" brewer:classforerror="estilo">
 						<label for="estilo" class="control-label">Estilo</label>
 						<div class="bw-field-action">
 							<select id="estilo" class="form-control" th:field="*{estilo}">
@@ -60,7 +69,7 @@
 						</div>
 					</div>
 					
-					<div class="col-sm-3  form-group" brewer:classforerror="sabor">
+					<div class="col-sm-3  form-group  bw-required" brewer:classforerror="sabor">
 						<label for="sabor" class="control-label">Sabor</label>
 						<select id="sabor" class="form-control" th:field="*{sabor}">
 							<option value="">Selecione o sabor</option>
@@ -68,7 +77,7 @@
 						</select>
 					</div>
 					
-					<div class="col-sm-3  form-group" brewer:classforerror="teorAlcoolico">
+					<div class="col-sm-3  form-group  bw-required" brewer:classforerror="teorAlcoolico">
 						<label for="teorAlcoolico" class="control-label">Teor alcoólico</label>
 						<div class="input-group">
 							<input id="teorAlcoolico" type="text" class="form-control  js-decimal" th:field="*{teorAlcoolico}"/>
@@ -76,8 +85,8 @@
 						</div>
 					</div>
 					
-					<div class="col-lg-3  col-sm-6  form-group" brewer:classforerror="origem">
-						<label for="origem">Origem</label>
+					<div class="col-lg-3  col-sm-6  form-group  bw-required" brewer:classforerror="origem">
+						<label for="origem" class="control-label">Origem</label>
 						<div>
 							<th:block th:each="origem : ${origens}">
 								<div class="radio  radio-inline">
@@ -90,7 +99,7 @@
 				</div>
 				
 				<div class="row">
-					<div class="col-sm-3  form-group" brewer:classforerror="valor">
+					<div class="col-sm-3  form-group  bw-required" brewer:classforerror="valor">
 						<label for="preco" class="control-label">Valor</label>
 						<div class="input-group">
 							<div class="input-group-addon">R$</div>
@@ -98,7 +107,7 @@
 						</div>
 					</div>
 					
-					<div class="col-sm-3  form-group" brewer:classforerror="comissao">
+					<div class="col-sm-3  form-group  bw-required" brewer:classforerror="comissao">
 						<label for="comissao" class="control-label">Comissão</label>
 						<div class="input-group">
 							<input id="comissao" type="text" class="form-control  js-decimal" th:field="*{comissao}"/>
@@ -106,7 +115,7 @@
 						</div>
 					</div>
 					
-					<div class="col-sm-3  form-group" brewer:classforerror="quantidadeEstoque">
+					<div class="col-sm-3  form-group  bw-required" brewer:classforerror="quantidadeEstoque">
 						<label for="estoque" class="control-label">Estoque</label>
 						<input id="estoque" type="text" class="form-control  js-plain" th:field="*{quantidadeEstoque}"/>
 					</div>
