--- a/brewer/src/main/resources/templates/cliente/CadastroCliente.html
+++ b/brewer/src/main/resources/templates/cliente/CadastroCliente.html
@@ -19,70 +19,70 @@
 	<div class="container-fluid">
 		<form>
 			<div class="row">
-				<div class="form-group  col-sm-12">
-					<label for="nome">Nome</label>
+				<div class="form-group  col-sm-12  bw-required">
+					<label for="nome" class="control-label">Nome</label>
 					<input type="text" class="form-control" id="nome" autofocus="autofocus" />
 				</div>
 			</div>
 			
 			<div class="row">
-				<div class="form-group  col-sm-4">
+				<div class="form-group  col-sm-4  bw-required">
 					<label>Pessoa</label>
 					<div>
 						<div class="radio  radio-inline">
-							<input type="radio" name="tipoPessoa"/>
+							<input type="radio" name="tipoPessoa" class="control-label"/>
 							<label>Física</label>
 						</div>
 						<div class="radio  radio-inline">
-							<input type="radio" name="tipoPessoa">
+							<input type="radio" name="tipoPessoa" class="control-label">
 							<label>Jurídica</label>
 						</div>
 					</div>
 				</div>
-				<div class="form-group  col-sm-8">
-					<label for="cpfOuCnpj">CPF/CNPJ</label>
+				<div class="form-group  col-sm-8  bw-required">
+					<label for="cpfOuCnpj" class="control-label">CPF/CNPJ</label>
 					<input type="text" class="form-control" id="cpfOuCnpj"/>
 				</div>
 			</div>
 			
 			<div class="row">
-				<div class="form-group  col-sm-4">
-					<label for="telefone">Telefone</label>
+				<div class="form-group  col-sm-4  bw-required">
+					<label for="telefone" class="control-label">Telefone</label>
 					<input type="text" class="form-control" id="telefone"/>
 				</div>
-				<div class="form-group  col-sm-8">
-					<label for="email">E-mail</label>
+				<div class="form-group  col-sm-8  bw-required">
+					<label for="email" class="control-label">E-mail</label>
 					<input type="text" class="form-control" id="email">
 				</div>
 			</div>
 	
 			<div class="row">
-				<div class="form-group  col-sm-4">
-					<label for="logradouro">Logradouro</label>
+				<div class="form-group  col-sm-4  bw-required">
+					<label for="logradouro" class="control-label">Logradouro</label>
 					<input type="text" class="form-control" id="logradouro">
 				</div>
-				<div class="form-group  col-sm-4">
-					<label for="numero">Número</label>
+				<div class="form-group  col-sm-4  bw-required">
+					<label for="numero" class="control-label">Número</label>
 					<input type="text" class="form-control" id="numero"/>
 				</div>
-				<div class="form-group  col-sm-4">
-					<label for="complemento">Complemento</label>
+				<div class="form-group  col-sm-4  bw-required">
+					<label for="complemento" class="control-label">Complemento</label>
 					<input type="text" class="form-control" id="complemento">
 				</div>
 			</div>
 			<div class="row">
-				<div class="form-group  col-sm-4">
-					<label for="cep">CEP</label>
+				<div class="form-group  col-sm-4  bw-required">
+					<label for="cep" class="control-label">CEP</label>
 					<input type="text" class="form-control" id="cep">
 				</div>
-				<div class="form-group  col-sm-4">
-					<label for="estado">Estado</label>
+				<div class="form-group  col-sm-4  bw-required">
+					<label for="estado" class="control-label">Estado</label>
 					<select id="estado" class="form-control">
 						<option value="">Selecione o estado</option>
 					</select>
 				</div>
-				<div class="form-group  col-sm-4">
-					<label for="cidade">Cidade</label>
+				<div class="form-group  col-sm-4  bw-required">
+					<label for="cidade" class="control-label">Cidade</label>
 					<select id="cidade" class="form-control">
 						<option value="">Selecione a cidade</option>
 					</select>
