--- a/brewer/src/main/resources/templates/cliente/CadastroCliente.html
+++ b/brewer/src/main/resources/templates/cliente/CadastroCliente.html
@@ -48,7 +48,7 @@
 			<div class="row">
 				<div class="form-group  col-sm-4  bw-required">
 					<label for="telefone" class="control-label">Telefone</label>
-					<input type="text" class="form-control" id="telefone"/>
+					<input type="text" class="form-control  js-phone-number" id="telefone"/>
 				</div>
 				<div class="form-group  col-sm-8  bw-required">
 					<label for="email" class="control-label">E-mail</label>
