--- a/brewer/src/main/resources/templates/cliente/CadastroCliente.html
+++ b/brewer/src/main/resources/templates/cliente/CadastroCliente.html
@@ -6,90 +6,101 @@
 <head>
 	<title>Cadastro de cliente</title>
 </head>
-<section layout:fragment="conteudo">
-
-	<div class="page-header">
-		<div class="container-fluid">
-			<h1>
-				Cadastro de Cliente
-			</h1>
-		</div>
-	</div>
+<body>
+	<section layout:fragment="conteudo">
 	
-	<div class="container-fluid">
-		<form>
-			<div class="row">
-				<div class="form-group  col-sm-12  bw-required">
-					<label for="nome" class="control-label">Nome</label>
-					<input type="text" class="form-control" id="nome" autofocus="autofocus" />
-				</div>
+		<div class="page-header">
+			<div class="container-fluid">
+				<h1>
+					Cadastro de Cliente
+				</h1>
 			</div>
-			
-			<div class="row">
-				<div class="form-group  col-sm-4  bw-required">
-					<label>Pessoa</label>
-					<div>
-						<div class="radio  radio-inline">
-							<input type="radio" name="tipoPessoa" class="control-label"/>
-							<label>Física</label>
-						</div>
-						<div class="radio  radio-inline">
-							<input type="radio" name="tipoPessoa" class="control-label">
-							<label>Jurídica</label>
-						</div>
+		</div>
+		
+		<div class="container-fluid">
+			<form>
+				<div class="row">
+					<div class="form-group  col-sm-12  bw-required">
+						<label for="nome" class="control-label">Nome</label>
+						<input type="text" class="form-control" id="nome" autofocus="autofocus" />
 					</div>
 				</div>
-				<div class="form-group  col-sm-8  bw-required">
-					<label for="cpfOuCnpj" class="control-label">CPF/CNPJ</label>
-					<input type="text" class="form-control" id="cpfOuCnpj"/>
+				
+				<div class="row">
+					<div class="form-group  col-sm-4  bw-required">
+						<label>Pessoa</label>
+						<div>
+							<div class="radio  radio-inline">
+								<input type="radio" name="tipoPessoa" id="id_FISICA" 
+									   class="js-radio-tipo-pessoa" data-documento="CPF"
+									   data-mascara="000.000.000-00"/>
+								<label class="control-label" for="id_FISICA">Física</label>
+							</div>
+							<div class="radio  radio-inline">
+								<input type="radio" name="tipoPessoa" id="id_JURIDICA" 
+									   class="js-radio-tipo-pessoa" data-documento="CNPJ"
+									   data-mascara="00.000.000/0000-00"/>
+								<label class="control-label" for="id_JURIDICA">Jurídica</label>
+							</div>
+						</div>
+					</div>
+					<div class="form-group  col-sm-8  bw-required">
+						<label for="cpfOuCnpj" class="control-label">CPF/CNPJ</label>
+						<input type="text" class="form-control" id="cpfOuCnpj" disabled />
+					</div>
 				</div>
-			</div>
-			
-			<div class="row">
-				<div class="form-group  col-sm-4  bw-required">
-					<label for="telefone" class="control-label">Telefone</label>
-					<input type="text" class="form-control  js-phone-number" id="telefone"/>
+				
+				<div class="row">
+					<div class="form-group  col-sm-4  bw-required">
+						<label for="telefone" class="control-label">Telefone</label>
+						<input type="text" class="form-control  js-phone-number" id="telefone"/>
+					</div>
+					<div class="form-group  col-sm-8  bw-required">
+						<label for="email" class="control-label">E-mail</label>
+						<input type="text" class="form-control" id="email">
+					</div>
 				</div>
-				<div class="form-group  col-sm-8  bw-required">
-					<label for="email" class="control-label">E-mail</label>
-					<input type="text" class="form-control" id="email">
+		
+				<div class="row">
+					<div class="form-group  col-sm-4  bw-required">
+						<label for="logradouro" class="control-label">Logradouro</label>
+						<input type="text" class="form-control" id="logradouro">
+					</div>
+					<div class="form-group  col-sm-4  bw-required">
+						<label for="numero" class="control-label">Número</label>
+						<input type="text" class="form-control" id="numero"/>
+					</div>
+					<div class="form-group  col-sm-4  bw-required">
+						<label for="complemento" class="control-label">Complemento</label>
+						<input type="text" class="form-control" id="complemento">
+					</div>
 				</div>
-			</div>
+				<div class="row">
+					<div class="form-group  col-sm-4  bw-required">
+						<label for="cep" class="control-label">CEP</label>
+						<input type="text" class="form-control" id="cep">
+					</div>
+					<div class="form-group  col-sm-4  bw-required">
+						<label for="estado" class="control-label">Estado</label>
+						<select id="estado" class="form-control">
+							<option value="">Selecione o estado</option>
+						</select>
+					</div>
+					<div class="form-group  col-sm-4  bw-required">
+						<label for="cidade" class="control-label">Cidade</label>
+						<select id="cidade" class="form-control">
+							<option value="">Selecione a cidade</option>
+						</select>
+					</div>
+				</div>
+				
+				<button type="submit" class="btn  btn-primary">Salvar</button>
+			</form>
+		</div>
+	</section>
 	
-			<div class="row">
-				<div class="form-group  col-sm-4  bw-required">
-					<label for="logradouro" class="control-label">Logradouro</label>
-					<input type="text" class="form-control" id="logradouro">
-				</div>
-				<div class="form-group  col-sm-4  bw-required">
-					<label for="numero" class="control-label">Número</label>
-					<input type="text" class="form-control" id="numero"/>
-				</div>
-				<div class="form-group  col-sm-4  bw-required">
-					<label for="complemento" class="control-label">Complemento</label>
-					<input type="text" class="form-control" id="complemento">
-				</div>
-			</div>
-			<div class="row">
-				<div class="form-group  col-sm-4  bw-required">
-					<label for="cep" class="control-label">CEP</label>
-					<input type="text" class="form-control" id="cep">
-				</div>
-				<div class="form-group  col-sm-4  bw-required">
-					<label for="estado" class="control-label">Estado</label>
-					<select id="estado" class="form-control">
-						<option value="">Selecione o estado</option>
-					</select>
-				</div>
-				<div class="form-group  col-sm-4  bw-required">
-					<label for="cidade" class="control-label">Cidade</label>
-					<select id="cidade" class="form-control">
-						<option value="">Selecione a cidade</option>
-					</select>
-				</div>
-			</div>
-			
-			<button type="submit" class="btn  btn-primary">Salvar</button>
-		</form>
-	</div>
-</section>
+	<th:block layout:fragment="javascript-extra">
+		<script th:src="@{/javascripts/cliente.mascara-cpf-cnpj.js}"></script>
+	</th:block>
+	</body>
+</html>
