--- a/brewer/src/main/resources/templates/cliente/CadastroCliente.html
+++ b/brewer/src/main/resources/templates/cliente/CadastroCliente.html
@@ -2,6 +2,7 @@
 <html lang="pt" xmlns="http://www.w3.org/1999/xhtml" 
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	xmlns:data="http://thymeleaf.org/extras/data"
 	layout:decorate="layout/LayoutPadrao">
 <head>
 	<title>Cadastro de cliente</title>
@@ -28,22 +29,20 @@
 				
 				<div class="row">
 					<div class="form-group  col-sm-4  bw-required">
-						<label>Pessoa</label>
+						<label>Tipo Pessoa</label>
 						<div>
-							<div class="radio  radio-inline">
-								<input type="radio" name="tipoPessoa" id="id_FISICA" 
-									   class="js-radio-tipo-pessoa" data-documento="CPF"
-									   data-mascara="000.000.000-00"/>
-								<label class="control-label" for="id_FISICA">Física</label>
-							</div>
-							<div class="radio  radio-inline">
-								<input type="radio" name="tipoPessoa" id="id_JURIDICA" 
-									   class="js-radio-tipo-pessoa" data-documento="CNPJ"
-									   data-mascara="00.000.000/0000-00"/>
-								<label class="control-label" for="id_JURIDICA">Jurídica</label>
-							</div>
+							<th:block th:each="tipoPessoa : ${tiposPessoa}">
+								<div class="radio  radio-inline">
+									<input type="radio" name="tipoPessoa" th:id="|id_${tipoPessoa}|" 
+										   class="js-radio-tipo-pessoa"
+										   data:documento="${tipoPessoa.documento}"
+										   data:mascara="${tipoPessoa.mascara}">
+									<label class="control-label" th:for="|id_${tipoPessoa}|" th:text="${tipoPessoa.descricao}">Física</label>
+								</div>
+							</th:block>
 						</div>
 					</div>
+					
 					<div class="form-group  col-sm-8  bw-required">
 						<label for="cpfOuCnpj" class="control-label">CPF/CNPJ</label>
 						<input type="text" class="form-control" id="cpfOuCnpj" disabled />
