--- a/brewer/src/main/resources/templates/cliente/CadastroCliente.html
+++ b/brewer/src/main/resources/templates/cliente/CadastroCliente.html
@@ -83,6 +83,7 @@
 						<label for="estado" class="control-label">Estado</label>
 						<select id="estado" class="form-control">
 							<option value="">Selecione o estado</option>
+							<option th:each="estado: ${estados}" th:value="${estado.codigo}" th:text="${estado.nome}"></option>
 						</select>
 					</div>
 					<div class="form-group  col-sm-4  bw-required">
