--- a/brewer/src/main/resources/templates/cerveja/CadastroCerveja.html
+++ b/brewer/src/main/resources/templates/cerveja/CadastroCerveja.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	xmlns:brewer="http://brewer.algaworks.com"
-	layout:decorate="layout/LayoutPadrao">
+	layout:decorate="~{layout/LayoutPadrao}">
 <head>
 	<title>Cadastro de Cerveja</title>
 	
@@ -33,8 +33,8 @@
 		<div class="container-fluid">
 	
 			<form method="POST" th:object="${cerveja}" class="form-vertical  js-form-loading">
-			
 				<brewer:message/>
+				
 				<div class="row">
 					<div class="col-sm-2  form-group  bw-required" brewer:classforerror="sku">
 						<label for="sku" class="control-label">SKU</label>
