--- a/brewer/src/main/resources/templates/cliente/CadastroCliente.html
+++ b/brewer/src/main/resources/templates/cliente/CadastroCliente.html
@@ -3,6 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	xmlns:data="http://thymeleaf.org/extras/data"
+	xmlns:brewer="http://brewer.algaworks.com"
 	layout:decorate="~{layout/LayoutPadrao}">
 <head>
 	<title>Cadastro de cliente</title>
@@ -19,24 +20,27 @@
 		</div>
 		
 		<div class="container-fluid">
-			<form>
+			<form method="POST" th:object="${cliente}" th:action="@{/clientes/novo}">
+				<brewer:message/>
+				
 				<div class="row">
-					<div class="form-group  col-sm-12  bw-required">
+					<div class="form-group  col-sm-12  bw-required" brewer:classforerror="nome">
 						<label for="nome" class="control-label">Nome</label>
-						<input type="text" class="form-control" id="nome" autofocus="autofocus" />
+						<input type="text" class="form-control" id="nome" autofocus="autofocus" th:field="*{nome}" />
 					</div>
 				</div>
 				
 				<div class="row">
-					<div class="form-group  col-sm-4  bw-required">
-						<label>Tipo Pessoa</label>
+					<div class="form-group  col-sm-4  bw-required" brewer:classforerror="tipoPessoa">
+						<label class="control-label">Tipo Pessoa</label>
 						<div>
 							<th:block th:each="tipoPessoa : ${tiposPessoa}">
 								<div class="radio  radio-inline">
 									<input type="radio" name="tipoPessoa" th:id="|id_${tipoPessoa}|" 
 										   class="js-radio-tipo-pessoa"
 										   data:documento="${tipoPessoa.documento}"
-										   data:mascara="${tipoPessoa.mascara}">
+										   data:mascara="${tipoPessoa.mascara}"
+										   th:field="*{tipoPessoa}" th:value="${tipoPessoa}">
 									<label class="control-label" th:for="|id_${tipoPessoa}|" th:text="${tipoPessoa.descricao}">Física</label>
 								</div>
 							</th:block>
@@ -45,39 +49,39 @@
 					
 					<div class="form-group  col-sm-8  bw-required">
 						<label for="cpfOuCnpj" class="control-label">CPF/CNPJ</label>
-						<input type="text" class="form-control" id="cpfOuCnpj" disabled />
+						<input type="text" class="form-control" id="cpfOuCnpj" th:field="*{cpfOuCnpj}" disabled />
 					</div>
 				</div>
 				
 				<div class="row">
 					<div class="form-group  col-sm-4  bw-required">
 						<label for="telefone" class="control-label">Telefone</label>
-						<input type="text" class="form-control  js-phone-number" id="telefone"/>
+						<input type="text" class="form-control  js-phone-number" id="telefone" th:field="*{telefone}"/>
 					</div>
-					<div class="form-group  col-sm-8  bw-required">
+					<div class="form-group  col-sm-8  bw-required" brewer:classforerror="email">
 						<label for="email" class="control-label">E-mail</label>
-						<input type="text" class="form-control" id="email">
+						<input type="text" class="form-control" id="email" th:field="*{email}">
 					</div>
 				</div>
 		
 				<div class="row">
 					<div class="form-group  col-sm-4  bw-required">
 						<label for="logradouro" class="control-label">Logradouro</label>
-						<input type="text" class="form-control" id="logradouro">
+						<input type="text" class="form-control" id="logradouro" th:field="*{endereco.logradouro}">
 					</div>
 					<div class="form-group  col-sm-4  bw-required">
 						<label for="numero" class="control-label">Número</label>
-						<input type="text" class="form-control" id="numero"/>
+						<input type="text" class="form-control" id="numero" th:field="*{endereco.numero}"/>
 					</div>
 					<div class="form-group  col-sm-4  bw-required">
 						<label for="complemento" class="control-label">Complemento</label>
-						<input type="text" class="form-control" id="complemento">
+						<input type="text" class="form-control" id="complemento" th:field="*{endereco.complemento}">
 					</div>
 				</div>
 				<div class="row">
 					<div class="form-group  col-sm-4  bw-required">
 						<label for="cep" class="control-label">CEP</label>
-						<input type="text" class="form-control" id="cep">
+						<input type="text" class="form-control" id="cep" th:field="*{endereco.cep}">
 					</div>
 					<div class="form-group  col-sm-4  bw-required">
 						<label for="estado" class="control-label">Estado</label>
@@ -89,7 +93,7 @@
 					<div class="form-group  col-sm-4">
 						<label for="cidade" class="control-label">Cidade</label>
 						<div class="bw-field-action">
-							<select id="cidade" class="form-control" data:url="@{/cidades}">
+							<select id="cidade" class="form-control" data:url="@{/cidades}" th:field="*{endereco.cidade}">
 							</select>	
 							
 							<div class="bw-field-action__icon  js-img-loading" style="display: none">
