--- a/brewer/src/main/resources/templates/cliente/CadastroCliente.html
+++ b/brewer/src/main/resources/templates/cliente/CadastroCliente.html
@@ -47,7 +47,7 @@
 						</div>
 					</div>
 					
-					<div class="form-group  col-sm-8  bw-required">
+					<div class="form-group  col-sm-8  bw-required" brewer:classforerror="cpfOuCnpj">
 						<label for="cpfOuCnpj" class="control-label">CPF/CNPJ</label>
 						<input type="text" class="form-control" id="cpfOuCnpj" th:field="*{cpfOuCnpj}" disabled />
 					</div>
