--- a/brewer/src/main/resources/templates/cliente/PesquisaClientes.html
+++ b/brewer/src/main/resources/templates/cliente/PesquisaClientes.html
@@ -58,6 +58,7 @@
 						</th>
 						<th class="table-clientes-col-cpf-cnpj">CPF/CNPJ</th>
 						<th class="table-clientes-col-telefone">Telefone</th>
+						<th class="table-clientes-col-cidade-estado">Cidade/Estado</th>
 						<th class="table-col-acoes"></th>
 					</tr>
 				</thead>
@@ -68,6 +69,7 @@
 						<td class="table-clientes-col-tipo-pessoa" th:text="${cliente.tipoPessoa.descricao}">Física</td>
 						<td class="table-clientes-col-cpf-cnpj" th:text="${cliente.cpfOuCnpj}">111.111.111-22</td>
 						<td class="table-clientes-col-telefone" th:text="${cliente.telefone}">(74) 99999-9999</td>
+						<td class="text-right" th:text="${cliente.endereco.nomeCidadeSiglaEstado}"></td>
 						<td class="text-center">
 							<a class="btn  btn-link  btn-xs" title="Editar"> 
 								<i class="glyphicon glyphicon-pencil"></i>
