--- a/brewer/src/main/resources/static/stylesheets/brewer.css
+++ b/brewer/src/main/resources/static/stylesheets/brewer.css
@@ -1,35 +1,30 @@
 /*
-###########################
+######################
 # UTILIDADES
-###########################
+######################
 */
-
 .bw-glyphicon-large {
 	font-size: 18px;
 }
 
 .bw-required > .control-label:after {
-	content: "*"
+	content: "*";
 }
 
+
 /*
-###########################
+######################
 # COMPONENTES
-###########################
+######################
 */
 
+/* Field Action */
 .bw-field-action {
 	display: flex;
 }
 
 .bw-field-action__icon {
 	margin: 6px 0 0 5px;
-}
-
-.switch-align {
-	padding-left: 0px;
-	margin-top: 0px;
-	margin-bottom: 0px;
 }
 
 /* Upload */
@@ -84,6 +79,11 @@
 # PÁGINAS DO SISTEMA
 ###################
 */
+
+/* Colunas comuns */
+.table-col-acoes {
+	width: 80px;
+}
 
 /* Colunas - Pesquisa de Cervejas */
 .table-cervejas-col-foto {
@@ -141,7 +141,18 @@
 	width: 140px;
 	text-align: right;
 }
+
 .table-clientes-col-cidade-estado {
+	width: 140px;
+	text-align: right;
+}
+
+/* Colunas - Pesquisa de cidades */
+.table-cidades-col-nome {
+	
+}
+
+.table-cidades-col-estado {
 	width: 140px;
 	text-align: right;
 }
