--- a/brewer/src/main/resources/templates/usuario/CadastroUsuario.html
+++ b/brewer/src/main/resources/templates/usuario/CadastroUsuario.html
@@ -2,7 +2,8 @@
 <html lang="pt" xmlns="http://www.w3.org/1999/xhtml" 
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorator="'layout/LayoutPadrao'">
+	xmlns:brewer="http://brewer.algaworks.com"
+	layout:decorate="~{layout/LayoutPadrao}">
 <head>
 	<title>Cadastro de cliente</title>
 	
@@ -10,41 +11,52 @@
 </head>
 <section layout:fragment="conteudo">
 
-	<div class="page-header">
-		<div class="container-fluid">
-			<h1>
-				Cadastro de Usuário
-			</h1>
+		<div class="page-header">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-sm-10">
+						<h1>Cadastro de usuário</h1>
+					</div>
+					<div class="col-sm-2">
+						<div class="aw-page-header-controls">
+							<a class="btn btn-default" th:href="@{/usuario}">
+								<i class="glyphicon  glyphicon-plus-sign"></i> <span class="hidden-xs  hidden-sm">Pesquisa</span>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div> 
 		</div>
-	</div>
 	
 		<div class="container-fluid">
-			<form>
+			<form method="POST" th:object="${usuario}" class="form-vertical  js-form-loading">
+				<brewer:message/>
+				
 				<div class="row">
-					<div class="form-group  col-sm-12">
-						<label for="nome">Nome</label>
-						<input type="text" class="form-control" id="nome">
+					<div class="form-group  col-sm-12  bw-required" brewer:classforerror="nome">
+						<label for="nome" class="control-label">Nome</label>
+						<input type="text" class="form-control" id="nome" th:field="*{nome}">
 					</div>
 				</div>
 				
 				<div class="row">
-					<div class="form-group  col-sm-6">
-						<label for="email">E-mail</label>
-						<input type="text" class="form-control" id="email"/>
+					<div class="form-group  col-sm-6  bw-required" brewer:classforerror="email">
+						<label for="email" class="control-label">E-mail</label>
+						<input type="text" class="form-control" id="email" th:field="*{email}"/>
 					</div>
 					<div class="form-group  col-sm-4">
-						<label class="dataNascimento">Data de nascimento</label>
-						<input type="text" class="form-control" id="dataNascimento">
+						<label for="dataNascimento"  class="control-label">Data de nascimento</label>
+						<input type="text" class="form-control" id="dataNascimento" th:field="*{dataNascimento}">
 					</div>
 				</div>
 				
 				<div class="row">
-					<div class="form-group  col-sm-3">
-						<label for="senha">Senha</label>
-						<input type="password" class="form-control" id="senha">
+					<div class="form-group  col-sm-3  bw-required" brewer:classforerror="senha">
+						<label for="senha" class="control-label">Senha</label>
+						<input type="password" class="form-control" id="senha" th:field"*{senha}">
 					</div>
-					<div class="form-group  col-sm-3">
-						<label for="confirmacaoSenha">Confirmação de senha</label>
+					<div class="form-group  col-sm-3  bw-required">
+						<label for="confirmacaoSenha" class="control-label">Confirmação de senha</label>
 						<input type="password" class="form-control" id="confirmacaoSenha">
 					</div>
 					<div class="form-group  col-sm-3">
@@ -57,7 +69,7 @@
 				</div>
 				
 				<div class="row">
-					<div class="form-group  col-sm-6">
+					<div class="form-group  col-sm-6  bw-required" brewer:classforerror="grupos">
 						<label class="control-label">Grupos</label> 
 						<div>
 	  						<div class="checkbox  checkbox-inline"> 
@@ -73,7 +85,8 @@
 				</div>
 				
 				<button type="submit" class="btn  btn-primary">Salvar</button>
-			</form>
+				</form>
+		</div>
 </section>
 
 <th:block layout:fragment="javascript-extra">
