--- a/brewer/src/main/resources/templates/usuario/CadastroUsuario.html
+++ b/brewer/src/main/resources/templates/usuario/CadastroUsuario.html
@@ -63,7 +63,7 @@
 						<label class="control-label" for="status">Status</label>
 						<div class="checkbox  switch-align">
 							<input type="checkbox" class="js-status" data-size="small"
-							       data-off-color="danger" data-on-text="Ativo" data-off-text="Inativo"/>
+							       data-off-color="danger" data-on-text="Ativo" data-off-text="Inativo" th:field="*{ativo}"/>
 						</div>
 					</div>
 				</div>
