--- a/brewer/src/main/resources/static/stylesheets/brewer.css
+++ b/brewer/src/main/resources/static/stylesheets/brewer.css
@@ -156,3 +156,14 @@
 	width: 140px;
 	text-align: right;
 }
+
+/*
+###############################
+# CUSTOMIZAÇAÕ DE COMPONENTES
+###############################
+*/
+
+.checkbox input[type="checkbox"]:checked + input + label::after {
+	font-family: 'FontAwesome';
+	content: "\f00c"; 
+}
