--- a/brewer/src/main/resources/templates/usuario/CadastroUsuario.html
+++ b/brewer/src/main/resources/templates/usuario/CadastroUsuario.html
@@ -19,7 +19,7 @@
 					</div>
 					<div class="col-sm-2">
 						<div class="aw-page-header-controls">
-							<a class="btn btn-default" th:href="@{/usuario}">
+							<a class="btn btn-default" th:href="@{/usuarios}">
 								<i class="glyphicon  glyphicon-plus-sign"></i> <span class="hidden-xs  hidden-sm">Pesquisa</span>
 							</a>
 						</div>
