--- a/brewer/src/main/resources/templates/usuario/PesquisaUsuarios.html
+++ b/brewer/src/main/resources/templates/usuario/PesquisaUsuarios.html
@@ -66,6 +66,7 @@
 	            	<tr>
 	            		<th>Nome</th>
 	                	<th>E-mail</th>
+	                	<th>Grupos</th>
 	                	<th>Status</th>
 	                 	<th class="table-col-acoes"></th>
 					</tr>
@@ -73,8 +74,11 @@
 				
 				<tbody>
 					<tr th:each="usuario : ${usuarios}">
-						<td th:text="${usuario.nome}">Nome</td>
-						<td th:text="${usuario.email}">Física</td>
+						<td th:text="${usuario.nome}"></td>
+						<td th:text="${usuario.email}"></td>
+						<td>
+							<span th:each="grupo : ${usuario.grupos}" th:text="|${grupo.nome}${grupoStat.last ? '' : ', '}|"></span>
+						</td>
 						<td th:text="${usuario.ativo} ? Ativo : Inativo"></td>
 						<td class="text-center">
 							<a class="btn  btn-link  btn-xs" title="Editar"> 
