--- a/brewer/src/main/resources/templates/usuario/PesquisaUsuarios.html
+++ b/brewer/src/main/resources/templates/usuario/PesquisaUsuarios.html
@@ -60,10 +60,26 @@
 			<button type="submit" class="btn  btn-primary">Pesquisar</button>
 		</form>
 		
+		<div class="aw-datatable-toolbar">
+			<button class="btn btn-default  btn-xs  js-status-btn" data:status="ATIVAR">
+				<span>Ativar</span>
+			</button>
+			
+			<button class="btn btn-default  btn-xs  js-status-btn" data:status="DESATIVAR">
+				<span>Desativar</span>
+			</button>
+		</div>
+
 		<div class="table-responsive  bw-tabela-simples">
 			<table class="table  table-hover">
 	            <thead>
 	            	<tr>
+	            		<th class="table-usuarios-col-status">
+	            			<div class="checkbox aw-checkbox-no-margin">
+	            				<input type="checkbox"/>
+	            				<label></label>
+	            			</div>
+	            		</th>
 	            		<th>Nome</th>
 	                	<th>E-mail</th>
 	                	<th>Grupos</th>
@@ -74,6 +90,12 @@
 				
 				<tbody>
 					<tr th:each="usuario : ${usuarios}">
+						<td>
+	            			<div class="checkbox aw-checkbox-no-margin">
+	            				<input type="checkbox" class="js-selecao" data:codigo="${usuario.codigo}"/>
+	            				<label></label>
+	            			</div>
+						</td>
 						<td th:text="${usuario.nome}"></td>
 						<td th:text="${usuario.email}"></td>
 						<td>
@@ -98,4 +120,7 @@
 	</div>
 
 </section>
+	<th:block layout:fragment="javascript-extra">
+		<script th:src="@{/javascripts/multiselecao.js}"></script>
+	</th:block>
 </body>
