--- a/brewer/src/main/resources/templates/layout/fragments/MenuLateral.html
+++ b/brewer/src/main/resources/templates/layout/fragments/MenuLateral.html
@@ -21,8 +21,9 @@
           			</a>
       
           			<ul class="aw-menu__list  aw-menu__list--sublist">
-			            <li class="aw-menu__item  aw-menu__item--link" brewer:menu="@{/estilos}">
+			            <li class="aw-menu__item  aw-menu__item--link" brewer:menu="@{/vendas}">
 			            	<a th:href="@{/vendas/novo}">Nova venda</a>
+			            	<a th:href="@{/vendas/}">Pesquisar vendas</a>
 			            </li>
           			</ul>
         		</li>
