--- a/brewer/src/main/resources/templates/venda/CadastroVenda.html
+++ b/brewer/src/main/resources/templates/venda/CadastroVenda.html
@@ -155,7 +155,7 @@
 					  
 					  <ul class="dropdown-menu">
 					    <li><a href="#" class="js-submit-btn" data:acao="emitir">Salvar e emitir</a></li>
-					    <li><a href="#" class="js-submit-btn" data:acao="emviar-email">Salvar e enviar por e-mail</a></li>
+					    <li><a href="#" class="js-submit-btn" data:acao="enviarEmail">Salvar e enviar por e-mail</a></li>
 					  </ul>
 					</div>
 				
