--- a/brewer/src/main/resources/templates/cerveja/CadastroCerveja.html
+++ b/brewer/src/main/resources/templates/cerveja/CadastroCerveja.html
@@ -17,7 +17,8 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-sm-10">
-						<h1>Cadastro de cerveja</h1>
+						<h1 th:if="${cerveja.nova}">Cadastro de cerveja</h1>
+						<h1 th:unless="${cerveja.nova}" th:text="|Edição da ${cerveja.nome}|"></h1>
 					</div>
 					<div class="col-sm-2">
 						<div class="aw-page-header-controls">
@@ -32,8 +33,11 @@
 
 		<div class="container-fluid">
 	
-			<form method="POST" th:object="${cerveja}" th:action="@{/cervejas/novo}" class="form-vertical  js-form-loading">
+			<form method="POST" th:object="${cerveja}" 
+			      th:action="${cerveja.nova} ? @{/cervejas/novo} : @{/cervejas/{codigo}(codigo=${cerveja.codigo})}" class="form-vertical  js-form-loading">
 				<brewer:message/>
+				
+				<input type="hidden" th:field="*{codigo}">
 				
 				<div class="row">
 					<div class="col-sm-2  form-group  bw-required" brewer:classforerror="sku">
@@ -125,6 +129,7 @@
 					<div class="form-group  col-sm-12">
 						<input type="hidden" th:field="*{foto}">
 						<input type="hidden" th:field="*{contentType}">
+						<input type="hidden" th:field="*{novaFoto}">
 					
 						<label class="control-label">Foto</label>
 						
