--- a/brewer/src/main/resources/templates/cerveja/PesquisaCervejas.html
+++ b/brewer/src/main/resources/templates/cerveja/PesquisaCervejas.html
@@ -120,7 +120,8 @@
 						<td th:text="${cerveja.origem.descricao}">Internacional</td>
 						<td class="text-right" th:text="|R$ ${cerveja.valor}|">R$ 8.00</td>
 						<td class="text-center">
-							<a class="btn  btn-link  btn-xs  js-tooltip" title="Editar"> 
+							<a class="btn  btn-link  btn-xs  js-tooltip" title="Editar" 
+							   th:href="@{/cervejas/{codigo}(codigo=${cerveja.codigo})}"> 
 								<i class="glyphicon glyphicon-pencil"></i>
 							</a>
 							<a class="btn  btn-link  btn-xs  js-tooltip  js-exclusao-btn" title="Excluir" href="#" 
