--- a/brewer/src/main/resources/templates/cliente/PesquisaClientes.html
+++ b/brewer/src/main/resources/templates/cliente/PesquisaClientes.html
@@ -71,10 +71,11 @@
 						<td class="table-clientes-col-telefone" th:text="${cliente.telefone}">(74) 99999-9999</td>
 						<td class="text-right" th:text="${cliente.endereco.nomeCidadeSiglaEstado}"></td>
 						<td class="text-center">
-							<a class="btn  btn-link  btn-xs" title="Editar"> 
+							<a class="btn  btn-link  btn-xs" title="Editar" th:href="@{/clientes/{codigo}(codigo=${cliente.codigo})}"> 
 								<i class="glyphicon glyphicon-pencil"></i>
 							</a>
-							<a class="btn  btn-link  btn-xs" title="Excluir">
+							<a class="btn  btn-link  btn-xs  js-exclusao-btn" title="Excluir" 
+							   data:url="@{/clientes/{codigo}(codigo=${cliente.codigo})}" data:codigo="${cliente.codigo}" data:objeto="${cliente.nome}">
 								<i class="glyphicon glyphicon-remove"></i>
 							</a>
 						</td>
