--- a/brewer/src/main/resources/templates/estilo/PesquisaEstilos.html
+++ b/brewer/src/main/resources/templates/estilo/PesquisaEstilos.html
@@ -62,10 +62,11 @@
 						<td class="text-center" th:text="${estilo.codigo}">1</td>
 						<td th:text="${estilo.nome}">Pilsen</td>
 						<td class="text-center">
-							<a class="btn  btn-link  btn-xs" title="Editar"> 
+							<a class="btn  btn-link  btn-xs" title="Editar" th:href="@{/estilos/{codigo}(codigo=${estilo.codigo})}"> 
 								<i class="glyphicon glyphicon-pencil"></i>
 							</a>
-							<a class="btn  btn-link  btn-xs" title="Excluir">
+							<a class="btn  btn-link  btn-xs  js-exclusao-btn" title="Excluir" 
+							   data:url="@{/estilos/{codigo}(codigo=${estilo.codigo})}" data:objeto="${estilo.nome}" data:codigo="${estilo.codigo}">
 								<i class="glyphicon glyphicon-remove"></i>
 							</a>
 						</td>
